# ChangeLog for dev-texlive/texlive-langgerman
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-langgerman/ChangeLog,v 1.28 2009/06/10 14:12:03 alexxy Exp $

  10 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  texlive-langgerman-2008.ebuild:
  Add ~mips love

  15 May 2009; Alexis Ballier <aballier@gentoo.org>
  -texlive-langgerman-2007.ebuild:
  remove old

  18 Mar 2009; Brent Baude <ranger@gentoo.org>
  texlive-langgerman-2008.ebuild:
  Marking texlive-langgerman-2008 ppc stable for bug 253551

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-langgerman-2008.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #253551

  13 Mar 2009; Brent Baude <ranger@gentoo.org>
  texlive-langgerman-2008.ebuild:
  Marking texlive-langgerman-2008 ppc64 stable for bug 235551

  11 Mar 2009; Markus Meier <maekke@gentoo.org>
  texlive-langgerman-2008.ebuild:
  amd64 stable, bug #253551

  10 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-langgerman-2008.ebuild:
  Add ~arm/~s390/~sh

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  texlive-langgerman-2008.ebuild:
  x86 stable, bug 253551

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org>
  texlive-langgerman-2008.ebuild:
  Stable for HPPA (bug #253551).

  27 Feb 2009; Ferris McCormick <fmccor@gentoo.org>
  texlive-langgerman-2008.ebuild:
  Sparc stable, part of Bug #253551.

  31 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  texlive-langgerman-2008.ebuild:
  Use stricter deps for texlive 2008 to require the 2008 version of a
  package, get rid of TEXLIVE_MODULES_DEPS and use standard DEPEND/RDEPEND
  fields

  09 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  texlive-langgerman-2007.ebuild:
  Add empty IUSE to please repoman

*texlive-langgerman-2008 (09 Sep 2008)

  09 Sep 2008; Alexis Ballier <aballier@gentoo.org> metadata.xml,
  +texlive-langgerman-2008.ebuild:
  Bump to 2008
