@@ -1,28 +1,39 @@
-DIST texlive-module-collection-langgerman-2007.zip 1028 RMD160 59e5cfce26051fd0591c908dcacee03f8a9be58f SHA1 669c4e56a36a1d2d648a1dcb72a6352456fc15a9 SHA256 21d24250fbe3fe10d4ab9ac241fa4154e68d18317392297385c7ec5b056c2e88
 DIST texlive-module-collection-langgerman-2008.tar.lzma 275 RMD160 9bd78887b9ccc8e990049fb0707daf2c70f7f82a SHA1 f28453944360b7c0fa69f4f63c06c344205fb3a4 SHA256 e4097c1f008af055056a8b3e4d6371b44292c0de162f230df77fde8a63c95f14
+DIST texlive-module-collection-langgerman-2009.tar.xz 364 RMD160 4c37fa0a9678ac1094f14179c9094e949ec9c389 SHA1 09f0ccd422268b2e9f1475ddb401f02a9beb1e40 SHA256 33feca0832e5239f54f0d588810b45d48618e28d0878246c7e2b7687dd22a71c
 DIST texlive-module-dehyph-exptl-2008.tar.lzma 57822 RMD160 dc849ccf6d6056125ccc36281d0ee94766dfdc71 SHA1 141ca545f58c40a0d2fc1c66c258ba6bb9571770 SHA256 09faf942d9ddd4eeb12d16f33a1f0810ee025587efb0fb9087c81cdfcc3bc2d2
+DIST texlive-module-dehyph-exptl-2009.tar.xz 66444 RMD160 08421979747b4313b90ff8a805d0e5c049e2beeb SHA1 28b6cd02797cf1aa4c21c7031942fe34b15ac6f6 SHA256 7dd782be0da7538372e4f61f050d28caf483420b80fd4a915332b3b33556e00c
 DIST texlive-module-dehyph-exptl.doc-2008.tar.lzma 293173 RMD160 6f340a883a81c2fdc6d399ed10f30c1584151353 SHA1 eaf78795f7f56c985442fc1910924198e2b797fb SHA256 4352a8e6e1c7b627e10e793b03adf47bcfce2dc6dbc4e18b2a426e98a960e903
-DIST texlive-module-german-2007.zip 103321 RMD160 ac5293266955dbf25a8ba6d08e504287024720cb SHA1 129f91ac56cb04534aea499bda7e44358f30f416 SHA256 43acd9c4f8736ae5b057a6f0860cd144c3450784fb48568e5f38bb6dd618a2d2
+DIST texlive-module-dehyph-exptl.doc-2009.tar.xz 345184 RMD160 3381dd90559d1c8604cad5cc9782ceea28ebf1e8 SHA1 dc2626a02ab1c07aaf23f4ee4afb5b91e9d2e556 SHA256 2dec606b748ab4b86c77ba31f879a4c17a361e4d11018d3798ddf49748864764
 DIST texlive-module-german-2008.tar.lzma 6673 RMD160 f61d61e99864ee1419bc048b0e742bb9cf4215c9 SHA1 8a07ead64b64dd39c47dd2b05da73c3767a0ba38 SHA256 45b8888332cf716b33ae010851ec45b45b8a6eecd04db458eea95f005e74c05b
+DIST texlive-module-german-2009.tar.xz 6748 RMD160 852045a5bb69cb8313eff91b0fd23b03dd6ce9a6 SHA1 497e13439ac2ea725fa0947c6e8ca91ffa4f6275 SHA256 90236616e57c63d52c139c250d123eff8bcca9b7f91482fe706c34e382e144e5
 DIST texlive-module-german.doc-2008.tar.lzma 50879 RMD160 b594fb6088630d1797373ac910e0e0aa7f905804 SHA1 9cad5537113484c0dcead3147c45e7dd4e3c2595 SHA256 1b80916d9c064ef0e4ab7a1ded7b956d48e8284366eb655a2b70937867370b52
+DIST texlive-module-german.doc-2009.tar.xz 50956 RMD160 5bf0a5847294bb0aa0df3c0cf77df9ebf1533beb SHA1 788011ba76c59ea45dc296dc869683055ae5c294 SHA256 5cd6a485545b87df44f92aa50345d442062a607d0ed638710c6927230462f836
 DIST texlive-module-german.source-2008.tar.lzma 27410 RMD160 1f4e6644a7ca2589fccc645ceb8903cb27eba9a3 SHA1 3fa3174e920fc5cf0d9f22c91f0ec8460d8b2f64 SHA256 a0d849d5fdaf556d4e3756fa1f0ccf0e668438d73a6c3ae607defab10ef4c495
-DIST texlive-module-germbib-2007.zip 76983 RMD160 092ab21dbe7a18c178177c751e207fd864039295 SHA1 3784356ce3326ee57331885f7218c901b7e78885 SHA256 b527889417263d16cdccfa59d5b3d49da2e57b577b0a2fd35e9affc9baaaf6a7
+DIST texlive-module-german.source-2009.tar.xz 27508 RMD160 3ae0d29bfe6ecc71122073823a3fd5ae64e1c9a7 SHA1 c8c20c4da728c5befcdc7efd7d3b3196d2e5b3d7 SHA256 f796301019ec7fb4266d8777f08ad43b24f3c99c9e8f94b9a4dd62e5f07a397f
 DIST texlive-module-germbib-2008.tar.lzma 12058 RMD160 3a5e9510ab2b4387ffb8d3a29b4979308bcee570 SHA1 dc5615650be4679e0c9c2d8deb8358825f55136c SHA256 ad0f560b6a2dc9c622e0d6e78d9021dd97f393e2984608a578a28a27a0726ac7
+DIST texlive-module-germbib-2009.tar.xz 12196 RMD160 6b898231aa1f24e09d3f9f4fc4cbcd977d455911 SHA1 cd6b93ba6f222715c80fee1343b88d39968d72a9 SHA256 eb3cea20680475cc591c27e4e8fd3093ebf29b5ae70faf6a26ab3eb1477a6262
 DIST texlive-module-germbib.doc-2008.tar.lzma 35443 RMD160 51f207891d471bf0c022c882e4ded6aa93d8bd83 SHA1 5eef133214630a0c63a6c0db06b76483b14718f5 SHA256 5315418c879fb1788febd6e239983454a673ee51d1e5d5d7c3544d19940cb4e0
-DIST texlive-module-hyphen-german-2007.zip 80403 RMD160 02366e24988c6c352ab3355034d5d7094ff08177 SHA1 6e47ee66a54440e6e6c0361567803743c03d413e SHA256 49c56e697f28df68f90bd1720cd423c39402dbfcd47ce1c935f6d73813e15b07
+DIST texlive-module-germbib.doc-2009.tar.xz 35560 RMD160 f7bcc12b85c1b89cb9d0b61f6a0349f9072648ec SHA1 8657ee4cfe3f7b85d6f99a13e608be02d8ef0f10 SHA256 fd7e7633dd3ffe587f409639b8f0225790b96657e3162e0f02df6dcb17516035
+DIST texlive-module-germkorr-2009.tar.xz 2328 RMD160 e538573c2318fc2a9ba94da9c30faa97168c6fce SHA1 a7b659a6804c5192830b0dc0e5177ef7681ac0e8 SHA256 b56bc90ce22fba76f0d4c4015a2f5b680a973fc027c3a266f5687a9528ef938f
+DIST texlive-module-germkorr.doc-2009.tar.xz 172300 RMD160 c56bc5a0d6dee05f6fed987fb0c39a15120ab775 SHA1 577659e3856b6a9aa5a768c591bed603e6b2b7c2 SHA256 74921245f58ae0d267d71629d47a82130740cf05affb14c8dc81c3f1b9193bef
 DIST texlive-module-hyphen-german-2008.tar.lzma 46274 RMD160 8e27a7110f04ab255eb84bbf82e4b030e001c0c4 SHA1 36a2b120fdf95ade02ba9f6a45c522f552d61920 SHA256 3fbbb4013caa28a187f72747e44d9b7ed31535abe94ec89e341d19275c2d5829
-DIST texlive-module-mkind-german-2007.zip 3038 RMD160 1202fd513408d6c6b23e152d29f486106b441c66 SHA1 0c81b55bd353a02b3b8a35c0418020da18e7c90a SHA256 e4011dacc08ba5270d54b9c1ebe7d2607731761d8da6c397828c16de44e84be1
+DIST texlive-module-hyphen-german-2009.tar.xz 46396 RMD160 75b6298eaf0e3affdf15f441202c1ff8339f8641 SHA1 1e767cb9c1fe5659d9679f5d4422515b2875fe5a SHA256 fc3897d231b7e70bddd441ecb5a0e9b278dd4f6298f3ab31e5945a0affc73002
+DIST texlive-module-kalender-2009.tar.xz 3128 RMD160 6a79e75a21a8223ca601078f7b730ec50fdd6a62 SHA1 0e2ab507716a67e785db890c2856470db54ebc5d SHA256 a84856bb70486299cf6768bd2e4c2692b4e6b2a99db2cc92f76b3409c5bd5e4f
 DIST texlive-module-mkind-german-2008.tar.lzma 1082 RMD160 abb04bcf80831a0ead00ca3184e830b060028fb2 SHA1 92deda8426d9c1cde884251ca8d82de03f2c5911 SHA256 48dfcc5963bd1924e2c9f06414ecacfab34d4946a1a9bc899d7028cbb9cc50af
-DIST texlive-module-r-und-s-2007.zip 22947 RMD160 52d504c9b8f70e98bb72e4c23e5c55e2d55bde1b SHA1 b7f75c5374e6e329a337f8f00073b9e362c53f3b SHA256 c3777bd836b5ebfe4a6c63636af972aa45a30e4b369beb2a157ddb499d21a6ff
+DIST texlive-module-mkind-german-2009.tar.xz 1148 RMD160 5405ef958e112181fe36ecac5300582570642d09 SHA1 9313d03fb1a137fb7bc4650b623764390fcb7a6b SHA256 639773d162ac207785822d36bd742a0861e1b0031a3a7e6742b8a167a94f98b7
 DIST texlive-module-r_und_s-2008.tar.lzma 15350 RMD160 7addd3c2db1ab4002895245509da58e00ffb0353 SHA1 f7144f51dded796b254c9611159cb7a017af7a2b SHA256 806f2a68e9e635036993a0d9b821512bf64991b7fd630cd6d4070ee179d985d5
+DIST texlive-module-r_und_s-2009.tar.xz 15420 RMD160 64117322c9487556f964c0096bbb0e1dc5b83aaa SHA1 3c7bdaf9d9437a87cc8cec7f38d42170116f44c4 SHA256 23b6bddeedb7a5b12da2a3ec65b011eaaade30b64f7a290f5921006e62552f11
 DIST texlive-module-r_und_s.doc-2008.tar.lzma 3526 RMD160 0746619f9777282bda91ea431c55646b9020cdbe SHA1 fb3272927faa42bdd4679c6fc8f6ae3ded16342b SHA256 34e4dad92c48044b2c93aa8e40a0132a9f195382722c0e523e49a532dc7a250f
-DIST texlive-module-uhrzeit-2007.zip 2327 RMD160 2fa5304ab2fd9169a36852584a0ccbb8c63d5f34 SHA1 adc7bea91f0f263129989bc884f8a976797110c9 SHA256 19f3bbb84ce97f4335e9995c07f473ddd9d90b6f832e7ec6e6a5134540d21bda
+DIST texlive-module-r_und_s.doc-2009.tar.xz 3584 RMD160 c7ed4d333ea3a3d9afff9c4b757a71624b5cde6d SHA1 5f5a28d4c71e37fde973df6337d89252cd6b1fcc SHA256 8178459b2af51526d643150b574d79b0b00ca3edfee4c65f150bca14037d4310
 DIST texlive-module-uhrzeit-2008.tar.lzma 1635 RMD160 18fa3cc94f922f5458850d9539d3dbf22d9a5e10 SHA1 751ef7f812103fcc5bca4258ee4e527699c5f6b2 SHA256 d55ca5f34924b6c55bdd270fc6566c9dcafb12245ca25870dadc21fd9c4e2496
-DIST texlive-module-umlaute-2007.zip 121753 RMD160 851b4c8f53aef1add50efbdc6c97dd6d4be57da1 SHA1 d14a62b89096e58e04a949e8f18bc37098001375 SHA256 78c3b2e49f312bdacc198e5434201175da64e5def59193c5de8a3aa7bad0955e
+DIST texlive-module-uhrzeit-2009.tar.xz 1692 RMD160 724beb79343392c14b0aea60242352e66e4a9b0b SHA1 dfaf4d11af67fabd44f9a02b0c261991b397c952 SHA256 43ccde57c2802d616e0f24f239f92d37072900819e940600ac1cfd112bcf2b4d
 DIST texlive-module-umlaute-2008.tar.lzma 2806 RMD160 60886f74d2df1e201f1aa85b4870c0b52a39bfd1 SHA1 833748b3a8399ca364fee71d8626fb478607a429 SHA256 4e6f7536de584c48112c9f43b3586f9a22540a272638cb81ea1831c7c6959f64
+DIST texlive-module-umlaute-2009.tar.xz 2876 RMD160 eae6d5e5a461b1782057b9730b960e15c7096566 SHA1 0ce4379f0810818ea45f8d7d03271dc91ca3b202 SHA256 6b10a03e25965ea7003e47502402100d464fc90b3b0612cc3369549620b63c32
 DIST texlive-module-umlaute.doc-2008.tar.lzma 106228 RMD160 e8a9a2f9a0f75f597813eb87a40e6e8af187e37e SHA1 c45f275f08e54a751e5051cc6f8b1cbf32e5ed1d SHA256 fb29dd8b96fc8e741fdb715b9d9530849b3469644b77423a2061f8ad16ba1a95
+DIST texlive-module-umlaute.doc-2009.tar.xz 106300 RMD160 2fb5e7c118af6990cdce704f7b77d75733c32dfd SHA1 639548797195b27e32080a0f4109fdf5d84a53c7 SHA256 86c36fb864a22ee8350318369bd3c44e3c05c9cec2e0b1dea13e07b7a99d943a
 DIST texlive-module-umlaute.source-2008.tar.lzma 5665 RMD160 a6619825a72297a1018c6ccf607bcd25bc4abe05 SHA1 2ec4d4f9c5014773a2d2b5819380272054c60857 SHA256 1eabddf262f0d0af1bc67ae40882755a456d6b729652cb3cc8b6848e69e353ba
-EBUILD texlive-langgerman-2007.ebuild 554 RMD160 e07aaadab424952584cee06b89ecebb9b3678d6a SHA1 79b5c95a9ef464452a7f15db7217c84b4df546c0 SHA256 5f172cbf6d12b31c440e212724f425eb5b3405a221ea4b272671e7681ca7f0b1
+DIST texlive-module-umlaute.source-2009.tar.xz 5732 RMD160 ddbaf9bcdff5ff865ebfaa1910682a8cc15f72b4 SHA1 eb884832ba8a3bfdef596c891b5c138e7cc6c88c SHA256 61e78bf86b56a9b9cc894d1c10c8133700c1d8dc2d6600d4114f61c9e8f049b7
 EBUILD texlive-langgerman-2008.ebuild 774 RMD160 ec58beee7f0c2fe64e7781277162623ebdd9a66c SHA1 f60bcc6745071dc1e40c709fe900de5131fce402 SHA256 8869875e35d78819dbc0bbca0d29f2c6d9596e36db8aa6cb0b1cfb086a588fec
-MISC ChangeLog 3709 RMD160 345e3f7823b592e4183d3962e5bb2f81fb1bfd97 SHA1 b719556ef02716dc85675f7ede037a4950f507bd SHA256 e1e12221ec616b2c58800c6e66a0a57d12ae905514e2806e1d01391310513d21
-MISC metadata.xml 317 RMD160 161b7cf2736fd2b0da9db592abb8b8e3d64911f3 SHA1 5e6464a508ad5dc2b20db745b5e871c319a7c26b SHA256 362a688060c76fd84acb7257e8ecf0e01c560a8aa39e506ad0747e675f97afcc
+EBUILD texlive-langgerman-2009.ebuild 851 RMD160 d332587c7e684e3392464e484227cc17de911831 SHA1 bd0314722e827f4227555d7f0a7178a0fc299cf4 SHA256 24c781737b5bd5f40bb551967fdb51717ed358fd966d9edf9e721c6010ea1324
+MISC ChangeLog 3877 RMD160 da980299dc45f592d6208faccf8ae17ad5abe46d SHA1 3c9a44a0d0637550db48a68ffa63e17bba9d3e4c SHA256 c521f4a4fed9cf6479d7b6f288ed2a6d7922bb961cfb9c875d0114314741c0f2
+MISC metadata.xml 332 RMD160 96d1627833bab7de4313085fb82d1fc325abe48d SHA1 161a4f137242efaf0bda38501ea0176333d13d63 SHA256 94abfdadbaad01584642754dc940a685f964b7311f4ea85bf087b61b9eaac0cb
