@@ -7,6 +7,6 @@
 		<name>Alexis Ballier</name>
 	</maintainer>
 <longdescription lang="en">
-Essential German
+Support for typesetting German.
 </longdescription>
 </pkgmetadata>
