@@ -1,6 +1,12 @@
 # ChangeLog for dev-texlive/texlive-langgerman
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-langgerman/ChangeLog,v 1.28 2009/06/10 14:12:03 alexxy Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-langgerman/ChangeLog,v 1.29 2010/01/11 03:22:48 aballier Exp $
+
+*texlive-langgerman-2009 (11 Jan 2010)
+
+  11 Jan 2010; Alexis Ballier <aballier@gentoo.org>
+  +texlive-langgerman-2009.ebuild, metadata.xml:
+  Bump to TeX Live 2009
 
   10 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
   texlive-langgerman-2008.ebuild:
